<resources>
    <string name="app_name">Family Expenditure</string>
    <string name="action_settings">Settings</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="paid">Paid</string>
    <string name="credit">Credit</string>
    <string name="date">Date</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
</resources>
